--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "build-storybook": "build-storybook -s public"
   },
   "devDependencies": {
-    "storybook": "^1.0.0",
-    "@storybook/react": "^3.2.19",
     "@storybook/addon-actions": "^3.2.19",
-    "@storybook/addon-links": "^3.2.19"
+    "@storybook/addon-links": "^3.2.19",
+    "@storybook/react": "^3.2.19",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1",
+    "storybook": "^1.0.0"
   }
 }
